@@ -3,6 +3,7 @@ description p4lang downlink
 addrouter r1
 int eth1 eth 0000.0000.1111 $1a$ $1b$
 int eth2 eth 0000.0000.1111 $2a$ $2b$
+int eth3 eth 0000.0000.1111 $3a$ $3b$
 !
 vrf def v1
  rd 1:1
@@ -10,6 +11,10 @@ vrf def v1
 int eth1
  exit
 int eth2
+ exit
+int eth3
+ vrf for v1
+ ipv4 addr 3.3.3.1 255.255.255.252
  exit
 int sdn1
  vrf for v1
@@ -27,11 +32,24 @@ server p4lang p4
 
 addrouter r2
 int eth1 eth 0000.0000.2222 $1b$ $1a$
+int eth2 eth 0000.0000.2222 $3b$ $3a$
+int eth3 eth 0000.0000.2222 $4a$ $4b$
 !
 vrf def v1
  rd 1:1
  exit
+proxy-profile p1
+ vrf v1
+ exit
 int eth1
+ exit
+int eth2
+ vrf for v1
+ ipv4 addr 3.3.3.2 255.255.255.252
+ exit
+int eth3
+ vrf for v1
+ ipv4 addr 3.3.3.6 255.255.255.252
  exit
 hair 1
  exit
@@ -41,6 +59,8 @@ serv pktmux pm
  cpu eth1
  data hair11 1
  data hair21 9
+ control p1 3.3.3.1 9080
+ control p1 3.3.3.5 9080
  exit
 int hair12
  vrf for v1
@@ -56,11 +76,16 @@ int hair22
 
 addrouter r3
 int eth1 eth 0000.0000.3333 $2b$ $2a$
+int eth2 eth 0000.0000.3333 $4b$ $4a$
 !
 vrf def v1
  rd 1:1
  exit
 int eth1
+ exit
+int eth2
+ vrf for v1
+ ipv4 addr 3.3.3.5 255.255.255.252
  exit
 int sdn1
  vrf for v1
@@ -75,6 +100,12 @@ server p4lang p4
  exit
 !
 
+
+r1 tping 100 5 3.3.3.2 vrf v1
+r2 tping 100 5 3.3.3.1 vrf v1
+
+r3 tping 100 5 3.3.3.6 vrf v1
+r2 tping 100 5 3.3.3.5 vrf v1
 
 r1 tping 100 5 1.1.1.2 vrf v1
 r2 tping 100 5 1.1.1.1 vrf v1
